fa_compile_runtime/antlr_gen/FaParser.cpp

// Generated from FaParser.g4 by ANTLR 4.10.1


#include "FaParserVisitor.h"

#include "FaParser.h"


using namespace antlrcpp;

using namespace antlr4;

namespace {

struct FaParserStaticData final {
  FaParserStaticData(std::vector<std::string> ruleNames,
                        std::vector<std::string> literalNames,
                        std::vector<std::string> symbolicNames)
      : ruleNames(std::move(ruleNames)), literalNames(std::move(literalNames)),
        symbolicNames(std::move(symbolicNames)),
        vocabulary(this->literalNames, this->symbolicNames) {}

  FaParserStaticData(const FaParserStaticData&) = delete;
  FaParserStaticData(FaParserStaticData&&) = delete;
  FaParserStaticData& operator=(const FaParserStaticData&) = delete;
  FaParserStaticData& operator=(FaParserStaticData&&) = delete;

  std::vector<antlr4::dfa::DFA> decisionToDFA;
  antlr4::atn::PredictionContextCache sharedContextCache;
  const std::vector<std::string> ruleNames;
  const std::vector<std::string> literalNames;
  const std::vector<std::string> symbolicNames;
  const antlr4::dfa::Vocabulary vocabulary;
  antlr4::atn::SerializedATNView serializedATN;
  std::unique_ptr<antlr4::atn::ATN> atn;
};

std::once_flag faparserParserOnceFlag;
FaParserStaticData *faparserParserStaticData = nullptr;

void faparserParserInitialize() {
  assert(faparserParserStaticData == nullptr);
  auto staticData = std::make_unique<FaParserStaticData>(
    std::vector<std::string>{
      "shiftLAssignOp", "shiftRAssignOp", "allAssignOp", "shiftLOp", "shiftROp", 
      "endl", "endl2", "quotFangL", "quotFangR", "quotJianL", "quotJianR", 
      "quotHuaL", "quotHuaR", "quotYuanL", "quotYuanR", "selfOp2", "compareOp2", 
      "changeOp2", "allOp2", "intNum", "floatNum", "formatString1Part", 
      "formatString1", "formatString2Part", "formatString2", "stringLiteral", 
      "literal", "ids", "typeAfter", "typeTuple", "types", "type", "argAttr", 
      "typeVar", "typeVarList", "typeWrapVar1", "typeWrapVarList1", "typeWrapVar2", 
      "typeWrapVarList2", "typeWrapVar3", "typeWrapVarList3", "typeWrapVar4", 
      "typeWrapVarList4", "quotStmtPart", "ifStmt", "quotStmtExpr", "ifExpr", 
      "whileStmt", "whileStmt2", "forHeader1", "forHeader2", "forHeader", 
      "forStmt", "switchStmtPart2Last", "quotStmtExprWrap", "switchExprPartLast", 
      "switchStmtPart", "switchStmt", "switchStmtPart2", "switchStmt2", 
      "switchExprPart", "switchExpr1", "switchExprPart2", "switchExpr2", 
      "quotExpr", "tupleExprItem", "tupleExpr", "exprOpt", "newExprItem", 
      "newExpr1", "newExpr2", "arrayExpr1Cond", "arrayExpr1", "arrayExpr2", 
      "arrayExpr3", "lambdaExpr", "strongExprBase", "strongExprPrefix", 
      "strongExprSuffix", "strongExpr", "middle3OpExpr", "middle2OpExpr", 
      "middleAstExpr", "middleExpr", "expr", "idAssignOpExpr", "defVarStmtPart", 
      "idAssignOpExpr2", "defVarStmt2Part", "defTypeStmt", "normalStmtPart", 
      "normalStmt", "stmt", "publicLevel", "blockTemplates", "itemName", 
      "typeNameTuple", "typeNameArgsTuple", "nameArgsTuple", "funcBody", 
      "annoArg", "annoPart", "annoBlock", "importedConstructFunc", "varAccesser", 
      "varAccesserItems", "classVar", "classFunc", "classBlock", "enumItem", 
      "enumBlock", "useStmt", "namespaceStmt", "program", "programEntry"
    },
    std::vector<std::string>{
      "", "'__cdecl'", "'__fastcall'", "'__stdcall'", "'annotation'", "'base'", 
      "'break'", "'calc'", "'continue'", "'class'", "'cast'", "'const'", 
      "'disperse'", "'do'", "'else'", "'enum'", "'expr'", "'for'", "'from'", 
      "'get'", "'if'", "'in'", "'is'", "'internal'", "'mut'", "'namespace'", 
      "'new'", "'operator'", "'params'", "'public'", "'protected'", "'private'", 
      "'return'", "'run'", "'select'", "'set'", "'signed'", "'static'", 
      "'stmt'", "'switchexpr'", "'switch'", "'type'", "'unsigned'", "'use'", 
      "'var'", "'when'", "'where'", "'while'", "'='", "", "", "", "", "", 
      "", "", "", "", "", "", "", "'~'", "'++'", "'--'", "'!'", "'.'", "'+'", 
      "'-'", "'*'", "'/'", "'%'", "'|'", "'&'", "'^'", "", "", "", "", "", 
      "'\\u003F'", "','", "'::'", "':'", "'\\n'", "';'", "'_'", "'['", "']'", 
      "'<'", "'>'", "'{'", "'}'", "'('", "')'", "", "", "", "", "", "", 
      "", "", "", "", "", "", "", "", "", "", "", "", "'{{'", "'}}'"
    },
    std::vector<std::string>{
      "", "CC__Cdecl", "CC__FastCall", "CC__StdCall", "Annotation", "Base", 
      "Break", "Calc", "Continue", "Class", "Cast", "Const", "Disperse", 
      "Do", "Else", "Enum", "Expr", "For", "From", "Get", "If", "In", "Is", 
      "Internal", "Mut", "Namespace", "New", "Operator", "Params", "Public", 
      "Protected", "Private", "Return", "Run", "Select", "Set", "Signed", 
      "Static", "Stmt", "SwitchExpr", "Switch", "Type", "Unsigned", "Use", 
      "AstClassVar", "When", "Where", "While", "AssignOp", "AddAssignOp", "SubAssignOp", 
      "StarAssignOp", "DivAssignOp", "ModAssignOp", "OrAssignOp", "AndAssignOp", 
      "XorAssignOp", "QusQusAssignOp", "StarStarAssignOp", "AndAndAssignOp", 
      "OrOrAssignOp", "ReverseOp", "AddAddOp", "SubSubOp", "Exclam", "PointOp", 
      "AddOp", "SubOp", "StarOp", "DivOp", "ModOp", "OrOp", "AndOp", "XorOp", 
      "PointPoint", "QusQusOp", "StarStarOp", "AndAndOp", "OrOrOp", "Qus", 
      "Comma", "ColonColon", "Colon", "Lf", "Semi", "Underline", "QFangL", 
      "QFangR", "LessThan", "GreatThan", "QHuaL", "QHuaR", "QYuanL", "QYuanR", 
      "LtEqualOp", "GtEqualOp", "EqualOp", "NotEqualOp", "ExprFuncDef", 
      "BoolLiteral", "HexLiteral", "IntLiteral", "FloatLiteral", "String1Literal", 
      "String2Literal", "String3Literal", "FmtString1", "FmtString2", "Id", 
      "Comment1", "Comment2", "WS", "QHuaLQHuaL", "QHuaRQHuaR", "QHuaLInside", 
      "RegularCharInside", "VerbatiumDoubleQuoteInside", "DoubleQuoteInside", 
      "RegularStringInside", "VerbatiumInsideString", "QHuaRInside", "FormatString"
    }
  );
  staticData->serializedATN = antlr4::atn::SerializedATNView(serializedATNSegment, sizeof(serializedATNSegment) / sizeof(serializedATNSegment[0]));

  antlr4::atn::ATNDeserializer deserializer;
  staticData->atn = deserializer.deserialize(staticData->serializedATN);

  const size_t count = staticData->atn->getNumberOfDecisions();
  staticData->decisionToDFA.reserve(count);
  for (size_t i = 0; i < count; i++) { 
    staticData->decisionToDFA.emplace_back(staticData->atn->getDecisionState(i), i);
  }
  faparserParserStaticData = staticData.release();
}

}

FaParser::FaParser(TokenStream *input) : FaParser(input, antlr4::atn::ParserATNSimulatorOptions()) {}

FaParser::FaParser(TokenStream *input, const antlr4::atn::ParserATNSimulatorOptions &options) : Parser(input) {
  FaParser::initialize();
  _interpreter = new atn::ParserATNSimulator(this, *faparserParserStaticData->atn, faparserParserStaticData->decisionToDFA, faparserParserStaticData->sharedContextCache, options);
}

FaParser::~FaParser() {
  delete _interpreter;
}

const atn::ATN& FaParser::getATN() const {
  return *faparserParserStaticData->atn;
}

std::string FaParser::getGrammarFileName() const {
  return "FaParser.g4";
}

const std::vector<std::string>& FaParser::getRuleNames() const {
  return faparserParserStaticData->ruleNames;
}

const dfa::Vocabulary& FaParser::getVocabulary() const {
  return faparserParserStaticData->vocabulary;
}

antlr4::atn::SerializedATNView FaParser::getSerializedATN() const {
  return faparserParserStaticData->serializedATN;
}


//----------------- ShiftLAssignOpContext ------------------------------------------------------------------

FaParser::ShiftLAssignOpContext::ShiftLAssignOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FaParser::ShiftLOpContext* FaParser::ShiftLAssignOpContext::shiftLOp() {
  return getRuleContext<FaParser::ShiftLOpContext>(0);
}

tree::TerminalNode* FaParser::ShiftLAssignOpContext::AssignOp() {
  return getToken(FaParser::AssignOp, 0);
}


size_t FaParser::ShiftLAssignOpContext::getRuleIndex() const {
  return FaParser::RuleShiftLAssignOp;
}


std::any FaParser::ShiftLAssignOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FaParserVisitor*>(visitor))
    return parserVisitor->visitShiftLAssignOp(this);
  else
    return visitor->visitChildren(this);
}

FaParser::ShiftLAssignOpContext* FaParser::shiftLAssignOp() {
  ShiftLAssignOpContext *_localctx = _tracker.createInstance<ShiftLAssignOpContext>(_ctx, getState());
  enterRule(_localctx, 0, FaParser::RuleShiftLAssignOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(230);
    shiftLOp();
    setState(231);
    match(FaParser::AssignOp);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftRAssignOpContext ------------------------------------------------------------------

FaParser::ShiftRAssignOpContext::ShiftRAssignOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

FaParser::ShiftROpContext* FaParser::ShiftRAssignOpContext::shiftROp() {
  return getRuleContext<FaParser::ShiftROpContext>(0);
}

tree::TerminalNode* FaParser::ShiftRAssignOpContext::AssignOp() {
  return getToken(FaParser::AssignOp, 0);
}


size_t FaParser::ShiftRAssignOpContext::getRuleIndex() const {
  return FaParser::RuleShiftRAssignOp;
}


std::any FaParser::ShiftRAssignOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FaParserVisitor*>(visitor))
    return parserVisitor->visitShiftRAssignOp(this);
  else
    return visitor->visitChildren(this);
}

FaParser::ShiftRAssignOpContext* FaParser::shiftRAssignOp() {
  ShiftRAssignOpContext *_localctx = _tracker.createInstance<ShiftRAssignOpContext>(_ctx, getState());
  enterRule(_localctx, 2, FaParser::RuleShiftRAssignOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(233);
    shiftROp();
    setState(234);
    match(FaParser::AssignOp);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- AllAssignOpContext ------------------------------------------------------------------

FaParser::AllAssignOpContext::AllAssignOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* FaParser::AllAssignOpContext::AssignOp() {
  return getToken(FaParser::AssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::QusQusAssignOp() {
  return getToken(FaParser::QusQusAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::AddAssignOp() {
  return getToken(FaParser::AddAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::SubAssignOp() {
  return getToken(FaParser::SubAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::StarAssignOp() {
  return getToken(FaParser::StarAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::StarStarAssignOp() {
  return getToken(FaParser::StarStarAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::DivAssignOp() {
  return getToken(FaParser::DivAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::ModAssignOp() {
  return getToken(FaParser::ModAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::AndAssignOp() {
  return getToken(FaParser::AndAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::OrAssignOp() {
  return getToken(FaParser::OrAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::XorAssignOp() {
  return getToken(FaParser::XorAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::AndAndAssignOp() {
  return getToken(FaParser::AndAndAssignOp, 0);
}

tree::TerminalNode* FaParser::AllAssignOpContext::OrOrAssignOp() {
  return getToken(FaParser::OrOrAssignOp, 0);
}

FaParser::ShiftLAssignOpContext* FaParser::AllAssignOpContext::shiftLAssignOp() {
  return getRuleContext<FaParser::ShiftLAssignOpContext>(0);
}

FaParser::ShiftRAssignOpContext* FaParser::AllAssignOpContext::shiftRAssignOp() {
  return getRuleContext<FaParser::ShiftRAssignOpContext>(0);
}


size_t FaParser::AllAssignOpContext::getRuleIndex() const {
  return FaParser::RuleAllAssignOp;
}


std::any FaParser::AllAssignOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FaParserVisitor*>(visitor))
    return parserVisitor->visitAllAssignOp(this);
  else
    return visitor->visitChildren(this);
}

FaParser::AllAssignOpContext* FaParser::allAssignOp() {
  AllAssignOpContext *_localctx = _tracker.createInstance<AllAssignOpContext>(_ctx, getState());
  enterRule(_localctx, 4, FaParser::RuleAllAssignOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    setState(251);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FaParser::AssignOp: {
        enterOuterAlt(_localctx, 1);
        setState(236);
        match(FaParser::AssignOp);
        break;
      }

      case FaParser::QusQusAssignOp: {
        enterOuterAlt(_localctx, 2);
        setState(237);
        match(FaParser::QusQusAssignOp);
        break;
      }

      case FaParser::AddAssignOp: {
        enterOuterAlt(_localctx, 3);
        setState(238);
        match(FaParser::AddAssignOp);
        break;
      }

      case FaParser::SubAssignOp: {
        enterOuterAlt(_localctx, 4);
        setState(239);
        match(FaParser::SubAssignOp);
        break;
      }

      case FaParser::StarAssignOp: {
        enterOuterAlt(_localctx, 5);
        setState(240);
        match(FaParser::StarAssignOp);
        break;
      }

      case FaParser::StarStarAssignOp: {
        enterOuterAlt(_localctx, 6);
        setState(241);
        match(FaParser::StarStarAssignOp);
        break;
      }

      case FaParser::DivAssignOp: {
        enterOuterAlt(_localctx, 7);
        setState(242);
        match(FaParser::DivAssignOp);
        break;
      }

      case FaParser::ModAssignOp: {
        enterOuterAlt(_localctx, 8);
        setState(243);
        match(FaParser::ModAssignOp);
        break;
      }

      case FaParser::AndAssignOp: {
        enterOuterAlt(_localctx, 9);
        setState(244);
        match(FaParser::AndAssignOp);
        break;
      }

      case FaParser::OrAssignOp: {
        enterOuterAlt(_localctx, 10);
        setState(245);
        match(FaParser::OrAssignOp);
        break;
      }

      case FaParser::XorAssignOp: {
        enterOuterAlt(_localctx, 11);
        setState(246);
        match(FaParser::XorAssignOp);
        break;
      }

      case FaParser::AndAndAssignOp: {
        enterOuterAlt(_localctx, 12);
        setState(247);
        match(FaParser::AndAndAssignOp);
        break;
      }

      case FaParser::OrOrAssignOp: {
        enterOuterAlt(_localctx, 13);
        setState(248);
        match(FaParser::OrOrAssignOp);
        break;
      }

      case FaParser::LessThan: {
        enterOuterAlt(_localctx, 14);
        setState(249);
        shiftLAssignOp();
        break;
      }

      case FaParser::GreatThan: {
        enterOuterAlt(_localctx, 15);
        setState(250);
        shiftRAssignOp();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftLOpContext ------------------------------------------------------------------

FaParser::ShiftLOpContext::ShiftLOpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FaParser::ShiftLOpContext::LessThan() {
  return getTokens(FaParser::LessThan);
}

tree::TerminalNode* FaParser::ShiftLOpContext::LessThan(size_t i) {
  return getToken(FaParser::LessThan, i);
}


size_t FaParser::ShiftLOpContext::getRuleIndex() const {
  return FaParser::RuleShiftLOp;
}


std::any FaParser::ShiftLOpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FaParserVisitor*>(visitor))
    return parserVisitor->visitShiftLOp(this);
  else
    return visitor->visitChildren(this);
}

FaParser::ShiftLOpContext* FaParser::shiftLOp() {
  ShiftLOpContext *_localctx = _tracker.createInstance<ShiftLOpContext>(_ctx, getState());
  enterRule(_localctx, 6, FaParser::RuleShiftLOp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(253);
    match(FaParser::LessThan);
    setState(254);
    match(FaParser::LessThan);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ShiftROpContext ------------------------------------------------------------------

FaParser::ShiftROpContext::ShiftROpContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FaParser::ShiftROpContext::GreatThan() {
  return getTokens(FaParser::GreatThan);
}

tree::TerminalNode* FaParser::ShiftROpContext::GreatThan(size_t i) {
  return getToken(FaParser::GreatThan, i);
}


size_t FaParser::ShiftROpContext::getRuleIndex() const {
  return FaParser::RuleShiftROp;
}


std::any FaParser::ShiftROpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FaParserVisitor*>(visitor))
    return parserVisitor->visitShiftROp(this);
  else
    return visitor->visitChildren(this);
}

FaParser::ShiftROpContext* FaParser::shiftROp() {
  ShiftROpContext *_localctx = _tracker.createInstance<ShiftROpContext>(_ctx, getState());
  enterRule(_localctx, 8, FaParser::RuleShiftROp);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(256);
    match(FaParser::GreatThan);
    setState(257);
    match(FaParser::GreatThan);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- EndlContext ------------------------------------------------------------------

FaParser::EndlContext::EndlContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> FaParser::EndlContext::Lf() {
  return getTokens(FaParser::Lf);
}

tree::TerminalNode* FaParser::EndlContext::Lf(size_t i) {
  return getToken(FaParser::Lf, i);
}

std::vector<tree::TerminalNode *> FaParser::EndlContext::Semi() {
  return getTokens(FaParser::Semi);
}

tree::TerminalNode* FaParser::EndlContext::Semi(size_t i) {
  return getToken(FaParser::Semi, i);
}


size_t FaParser::EndlContext::getRuleIndex() const {
  return FaParser::RuleEndl;
}


std::any FaParser::EndlContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FaParserVisitor*>(visitor))
    return parserVisitor->visitEndl(this);
  else
    return visitor->visitChildren(this);
}

FaParser::EndlContext* FaParser::endl() {
  EndlContext *_localctx = _tracker.createInstance<EndlContext>(_ctx, getState());
  enterRule(_localctx, 10, FaParser::RuleEndl);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(260); 
    _errHandler->sync(this);
    alt = 1;
    do {
      switch (alt) {
        case 1: {
              setState(259);
              _la = _input->LA(1);
              if (!(_la == FaParser::Lf
